src/tx/snapshots/pakajo__tx__snapshots__upgrade__upgrade_nothing_to_do_snapshot.snap
---
source: src/tx/snapshots/upgrade.rs
assertion_line: 223
expression: "run_upgrade_case(&[local_pkg(\"upgun\", \"1.0-1\")],\n&[sync_pkg(\"upgun\", \"1.0-1\")],)"
---
summary:
installed:
  upgun 1.0-1 Explicit
