src/tx/snapshots/pakajo__tx__snapshots__upgrade__upgrade_plain_snapshot.snap
---
source: src/tx/snapshots/upgrade.rs
assertion_line: 153
expression: "run_upgrade_case(&[local_pkg(\"upgun\", \"1.0-1\")],\n&[sync_pkg(\"upgun\", \"2.0-1\")],)"
---
summary:
  upgun 2.0-1
finish: Stopped
installed:
  upgun 1.0-1 Explicit
